aql-processor/build/generated-src/antlr/main/com/ethercis/aql/parser/com/ethercis/aql/parser/AqlParser.java
// Generated from com\ethercis\aql\parser\Aql.g4 by ANTLR 4.5.3
package com.ethercis.aql.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EHR=1, AND=2, OR=3, XOR=4, NOT=5, IN=6, MATCHES=7, LIKE=8, ILIKE=9, SIMILARTO=10, 
		SELECT=11, TOP=12, FORWARD=13, BACKWARD=14, AS=15, CONTAINS=16, WHERE=17, 
		ORDERBY=18, OFFSET=19, LIMIT=20, FROM=21, DESCENDING=22, ASCENDING=23, 
		DESC=24, ASC=25, EXISTS=26, VERSION=27, VERSIONED_OBJECT=28, ALL_VERSIONS=29, 
		LATEST_VERSION=30, DISTINCT=31, JOINON=32, PERSON=33, AGENT=34, ORGANISATION=35, 
		GROUP=36, FUNCTION_IDENTIFIER=37, EXTENSION_IDENTIFIER=38, BOOLEAN=39, 
		NODEID=40, ARCHETYPEID=41, IDENTIFIER=42, DEMOGRAPHIC=43, INTEGER=44, 
		FLOAT=45, DATE=46, PARAMETER=47, UNIQUEID=48, COMPARABLEOPERATOR=49, URIVALUE=50, 
		REGEXPATTERN=51, STRING=52, EXP_STRING=53, SLASH=54, COMMA=55, SEMICOLON=56, 
		OPEN_BRACKET=57, CLOSE_BRACKET=58, OPEN_PAR=59, CLOSE_PAR=60, OPEN_CURLY=61, 
		CLOSE_CURLY=62, ARITHMETIC_BINOP=63, COUNT=64, AVG=65, BOOL_AND=66, BOOL_OR=67, 
		EVERY=68, MAX=69, MIN=70, SUM=71, SUBSTR=72, STRPOS=73, SPLIT_PART=74, 
		BTRIM=75, CONCAT=76, CONCAT_WS=77, DECODE=78, ENCODE=79, FORMAT=80, INITCAP=81, 
		LEFT=82, LENGTH=83, LPAD=84, LTRIM=85, REGEXP_MATCH=86, REGEXP_REPLACE=87, 
		REGEXP_SPLIT_TO_ARRAY=88, REGEXP_SPLIT_TO_TABLE=89, REPEAT=90, REPLACE=91, 
		REVERSE=92, RIGHT=93, RPAD=94, RTRIM=95, TRANSLATE=96, CORR=97, COVAR_POP=98, 
		COVAR_SAMP=99, REGR_AVGX=100, REGR_AVGY=101, REGR_COUNT=102, REGR_INTERCEPT=103, 
		REGR_R2=104, REGR_SLOPE=105, REGR_SXX=106, REGR_SXY=107, REGR_SYY=108, 
		STDDEV=109, STDDEV_POP=110, STDDEV_SAMP=111, VARIANCE=112, VAR_POP=113, 
		VAR_SAMP=114, RAW_COMPOSITION_ENCODE=115, WS=116;
	public static final int
		RULE_query = 0, RULE_queryExpr = 1, RULE_select = 2, RULE_topExpr = 3, 
		RULE_function = 4, RULE_extension = 5, RULE_where = 6, RULE_orderBy = 7, 
		RULE_limit = 8, RULE_offset = 9, RULE_orderBySeq = 10, RULE_orderByExpr = 11, 
		RULE_selectExpr = 12, RULE_stdExpression = 13, RULE_from = 14, RULE_fromEHR = 15, 
		RULE_fromForeignData = 16, RULE_fromExpr = 17, RULE_containsExpression = 18, 
		RULE_containExpressionBool = 19, RULE_contains = 20, RULE_identifiedExpr = 21, 
		RULE_identifiedEquality = 22, RULE_identifiedOperand = 23, RULE_identifiedPath = 24, 
		RULE_predicate = 25, RULE_nodePredicateOr = 26, RULE_nodePredicateAnd = 27, 
		RULE_nodePredicateComparable = 28, RULE_nodePredicateRegEx = 29, RULE_matchesOperand = 30, 
		RULE_valueListItems = 31, RULE_versionpredicate = 32, RULE_versionpredicateOptions = 33, 
		RULE_standardPredicate = 34, RULE_joinPredicate = 35, RULE_predicateExpr = 36, 
		RULE_predicateAnd = 37, RULE_predicateEquality = 38, RULE_predicateOperand = 39, 
		RULE_operand = 40, RULE_objectPath = 41, RULE_pathPart = 42, RULE_classExpr = 43, 
		RULE_simpleClassExpr = 44, RULE_archetypedClassExpr = 45, RULE_versionedClassExpr = 46, 
		RULE_versionClassExpr = 47;
	public static final String[] ruleNames = {
		"query", "queryExpr", "select", "topExpr", "function", "extension", "where", 
		"orderBy", "limit", "offset", "orderBySeq", "orderByExpr", "selectExpr", 
		"stdExpression", "from", "fromEHR", "fromForeignData", "fromExpr", "containsExpression", 
		"containExpressionBool", "contains", "identifiedExpr", "identifiedEquality", 
		"identifiedOperand", "identifiedPath", "predicate", "nodePredicateOr", 
		"nodePredicateAnd", "nodePredicateComparable", "nodePredicateRegEx", "matchesOperand", 
		"valueListItems", "versionpredicate", "versionpredicateOptions", "standardPredicate", 
		"joinPredicate", "predicateExpr", "predicateAnd", "predicateEquality", 
		"predicateOperand", "operand", "objectPath", "pathPart", "classExpr", 
		"simpleClassExpr", "archetypedClassExpr", "versionedClassExpr", "versionClassExpr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'/'", "','", "';'", "'['", "']'", 
		"'('", "')'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EHR", "AND", "OR", "XOR", "NOT", "IN", "MATCHES", "LIKE", "ILIKE", 
		"SIMILARTO", "SELECT", "TOP", "FORWARD", "BACKWARD", "AS", "CONTAINS", 
		"WHERE", "ORDERBY", "OFFSET", "LIMIT", "FROM", "DESCENDING", "ASCENDING", 
		"DESC", "ASC", "EXISTS", "VERSION", "VERSIONED_OBJECT", "ALL_VERSIONS", 
		"LATEST_VERSION", "DISTINCT", "JOINON", "PERSON", "AGENT", "ORGANISATION", 
		"GROUP", "FUNCTION_IDENTIFIER", "EXTENSION_IDENTIFIER", "BOOLEAN", "NODEID", 
		"ARCHETYPEID", "IDENTIFIER", "DEMOGRAPHIC", "INTEGER", "FLOAT", "DATE", 
		"PARAMETER", "UNIQUEID", "COMPARABLEOPERATOR", "URIVALUE", "REGEXPATTERN", 
		"STRING", "EXP_STRING", "SLASH", "COMMA", "SEMICOLON", "OPEN_BRACKET", 
		"CLOSE_BRACKET", "OPEN_PAR", "CLOSE_PAR", "OPEN_CURLY", "CLOSE_CURLY", 
		"ARITHMETIC_BINOP", "COUNT", "AVG", "BOOL_AND", "BOOL_OR", "EVERY", "MAX", 
		"MIN", "SUM", "SUBSTR", "STRPOS", "SPLIT_PART", "BTRIM", "CONCAT", "CONCAT_WS", 
		"DECODE", "ENCODE", "FORMAT", "INITCAP", "LEFT", "LENGTH", "LPAD", "LTRIM", 
		"REGEXP_MATCH", "REGEXP_REPLACE", "REGEXP_SPLIT_TO_ARRAY", "REGEXP_SPLIT_TO_TABLE", 
		"REPEAT", "REPLACE", "REVERSE", "RIGHT", "RPAD", "RTRIM", "TRANSLATE", 
		"CORR", "COVAR_POP", "COVAR_SAMP", "REGR_AVGX", "REGR_AVGY", "REGR_COUNT", 
		"REGR_INTERCEPT", "REGR_R2", "REGR_SLOPE", "REGR_SXX", "REGR_SXY", "REGR_SYY", 
		"STDDEV", "STDDEV_POP", "STDDEV_SAMP", "VARIANCE", "VAR_POP", "VAR_SAMP", 
		"RAW_COMPOSITION_ENCODE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public QueryExprContext queryExpr() {
			return getRuleContext(QueryExprContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AqlListener ) ((AqlListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AqlListener ) ((AqlListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AqlVisitor ) return ((AqlVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			queryExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryExprContext extends ParserRuleContext {
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public FromContext from() {
			return getRuleContext(FromContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AqlParser.EOF, 0); }
		public WhereContext where() {
			return getRuleContext(WhereContext.class,0);
		}
		public LimitContext limit() {
			return getRuleContext(LimitContext.class,0);
		}
		public OffsetContext offset() {
			return getRuleContext(OffsetContext.class,0);
		}
		public OrderByContext orderBy() {
			return getRuleContext(OrderByContext.class,0);
		}
		public QueryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AqlListener ) ((AqlListener)listener).enterQueryExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AqlListener ) ((AqlListener)listener).exitQueryExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AqlVisitor ) return ((AqlVisitor<? extends T>)visitor).visitQueryExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryExprContext queryExpr() throws RecognitionException {
		QueryExprContext _localctx = new QueryExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_queryExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			select();
			setState(99);
			from();
			setState(101);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(100);
				where();
				}
			}

			setState(104);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(103);
				limit();
				}
			}

			setState(107);
			_la = _input.LA(1);
			if (_la==OFFSET) {
				{
				setState(106);
				offset();
				}
			}

			setState(110);
			_la = _input.LA(1);
			if (_la==ORDERBY) {
				{
				setState(109);
				orderBy();
				}
			}

			setState(112);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(AqlParser.SELECT, 0); }
		public SelectExprContext selectExpr() {
			return getRuleContext(SelectExprContext.class,0);
		}
		public TopExprContext topExpr() {
			return getRuleContext(TopExprContext.class,0);
		}
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AqlListener ) ((AqlListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AqlListener ) ((AqlListener)listener).exitSelect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AqlVisitor ) return ((AqlVisitor<? extends T>)visitor).visitSelect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_select);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(SELECT);
				setState(115);
				selectExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				match(SELECT);
				setState(117);
				topExpr();
				setState(118);
				selectExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopExprContext extends ParserRuleContext {
		public TerminalNode TOP() { return getToken(AqlParser.TOP, 0); }
		public TerminalNode INTEGER() { return getToken(AqlParser.INTEGER, 0); }
		public TerminalNode BACKWARD() { return getToken(AqlParser.BACKWARD, 0); }
		public TerminalNode FORWARD() { return getToken(AqlParser.FORWARD, 0); }
		public TopExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AqlListener ) ((AqlListener)listener).enterTopExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AqlListener ) ((AqlListener)listener).exitTopExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AqlVisitor ) return ((AqlVisitor<? extends T>)visitor).visitTopExpr(this);
			else return visitor.visitChildren(this);
		}
	}
